bin_PROGRAMS = tivodecode tdcat
tivodecode_SOURCES = tivodecode.cxx bits.hxx sha1.cxx tivo_decoder_ts.hxx cli_common.cxx sha1.hxx tivo_decoder_ts_pkt.cxx cli_common.hxx tivo_decoder_ts_stream.cxx getopt_td.cxx tivo_parse.cxx getopt_td.hxx tivo_decoder_base.cxx tivo_parse.hxx happyfile.cxx tivo_decoder_base.hxx TuringBoxes.hxx happyfile.hxx tivo_decoder_mpeg_parser.cxx TuringFast.cxx hexlib.cxx tivo_decoder_mpeg_parser.hxx Turing.hxx hexlib.hxx tivo_decoder_ps.cxx turing_stream.cxx md5.cxx tivo_decoder_ps.hxx turing_stream.hxx md5.hxx tivo_decoder_ts.cxx
tdcat_SOURCES = tdcat.cxx bits.hxx sha1.cxx cli_common.cxx sha1.hxx cli_common.hxx getopt_td.cxx tivo_parse.cxx getopt_td.hxx tivo_parse.hxx happyfile.cxx tivo_decoder_base.hxx TuringBoxes.hxx happyfile.hxx TuringFast.cxx hexlib.cxx Turing.hxx hexlib.hxx turing_stream.cxx md5.cxx turing_stream.hxx md5.hxx
